--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn
+fastapi==0.95.2
+uvicorn==0.22.0
 python-telegram-bot==20.7
-python-dotenv
-requests
+python-dotenv==1.0.0
+requests==2.31.0
+
