--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-python-telegram-bot==20.7
-python-dotenv==1.0.0
+fastapi
+uvicorn
 requests==2.31.0
+twilio==9.2.3
+gspread==6.1.2
+google-auth==2.31.0
+openai>=1.0.0
+
 
