--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
-uvicorn
+fastapi==0.95.2
+uvicorn==0.22.0
+python-telegram-bot==20.7
+python-dotenv==1.0.0
 requests==2.31.0
-twilio==9.2.3
-gspread==6.1.2
-google-auth==2.31.0
-openai>=1.0.0
-
-
+gspread==6.2.1
+google-auth==2.33.0
+rapidfuzz==3.9.6
